# SOAR-Lite-Threat-Intel-Automation

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  env-prod  pyproject.toml  requirements.txt
IR/: main.py
core/: main.py
core/api/dependencies/: common.py
core/api/routes/: alerts.py  dashboard.py  export.py  home.py  model.py  upload.py  webhook.py
core/models/: train_alert_classifier.py
core/services/: actions.py  attck_mapper.py  create_alert_dataset.py  enrichment.py  generate_threat_data.py  ml_classifier.py  report.py  risk.py  webhook_rules.py
core/services/enrichment/: fusion.py  virustotal.py
core/services/integrations/: webhook.py  webhook_slack.py
data/: alerts-template.csv  alerts.csv  alerts_template.csv  dataset_for_ml.csv
static/public/: alerts-template.csv
static/public/artifacts/: dashboard.html  metrics.csv
static/public/artifacts/reports/: report_v20250419-002202.txt
templates/: api_usage.html  dashboard_template.html  enriched_alert_report.html  index.html  report_fallback_modal.html  threat_overview.html  train_fallback.html  upload-alerts.html  webhook_rules.html
utils/: actions.py  enrichment.py  report.py  risk.py
